netboot/install/deploy_root/iptables/iptables.protonet.rules
# Generated by iptables-save v1.3.8 on Sun Sep 28 15:04:54 2008
*nat
:PREROUTING ACCEPT [1791:296761]
:POSTROUTING ACCEPT [219:17937]
:OUTPUT ACCEPT [236:21204]
-A PREROUTING -i ath1 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.42.1.1:80 
-A POSTROUTING -o eth0 -j MASQUERADE 
COMMIT
# Completed on Sun Sep 28 15:04:54 2008
# Generated by iptables-save v1.3.8 on Sun Sep 28 15:04:54 2008
*filter
:INPUT ACCEPT [809:60124]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [430:48200]
:known_user_internet_allowed - [0:0]
:unknown-user - [0:0]
:unknown_user - [0:0]
-A INPUT -i ath1 -j unknown_user 
-A FORWARD -i eth0 -o ath0 -j known_user_internet_allowed 
-A FORWARD -i ath0 -o eth0 -j known_user_internet_allowed 
-A known_user_internet_allowed -i eth0 -o ath1 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A known_user_internet_allowed -i ath1 -o eth0 -j ACCEPT 
-A known_user_internet_allowed -i eth0 -o ath0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A known_user_internet_allowed -i ath0 -o eth0 -j ACCEPT 
-A known_user_internet_allowed -j LOG 
-A unknown_user -p tcp -m tcp --dport 80 -j ACCEPT 
-A unknown_user -p udp -m udp --dport 53 -j ACCEPT 
-A unknown_user -j DROP 
COMMIT
# Completed on Sun Sep 28 15:04:54 2008
